--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -7,6 +7,7 @@
 @import url('components/forms.css');
 @import url('components/cards.css');
 @import url('components/profile.css');
+@import url('components/auth.css');
 
 @import url('layout/navbar.css');
 @import url('layout/hero.css');
